--- a/root/yousefamar.njk
+++ b/root/yousefamar.njk
@@ -59,6 +59,8 @@ public: true
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css"/>
     <link rel="stylesheet" href="/memo/assets/styles/index.css"/>
 
+    <link rel="authorization_endpoint" href="https://indieauth.com/auth">
+    <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
     <link rel="webmention" href="https://webmention.io/yousefamar.com/webmention" />
     <link rel="pingback" href="https://webmention.io/yousefamar.com/xmlrpc" />
     <link rel="microsub" href="https://aperture.p3k.io/microsub/790">
