add: CTA button on home page

--- a/root/yousefamar.njk
+++ b/root/yousefamar.njk
@@ -137,6 +137,11 @@ public: true
       .hero-links a {
         white-space: nowrap;
       }
+      .cta-button {
+        margin-top: 28rem;
+        text-transform: uppercase;
+        pointer-events: all;
+      }
       .values {
         text-align: center;
         font-size: 0.5em;
@@ -234,6 +239,14 @@ public: true
               <a href="/memo/" target="_blank"><i class="fa-solid fa-database"></i> Notes</a>&nbsp;&nbsp;&bull;&nbsp;
               <a href="/memo/log/" target="_blank"><i class="fa-solid fa-rss"></i> Feed</a>
             </div>
+          </div>
+        </div>
+        <div class="fullscreen" data-depth="0">
+          <div class="fullscreen center">
+            <button class="cta-button" onclick="window.location.href='/cto'">
+              <i class="fa-solid fa-handshake" style="margin-right: 0.5em;"></i>
+              Let's work together
+            </button>
           </div>
         </div>
       </div>
