--- a/_includes/layoutToggle.njk
+++ b/_includes/layoutToggle.njk
@@ -61,6 +61,7 @@ input:checked + .slider:before {
   align-items: center;
   justify-content: center;
   margin: 10px auto;
+  visibility: hidden;
 }
 
 .switch-and-icons {
