fix: avatar URL

--- a/root/yousefamar.njk
+++ b/root/yousefamar.njk
@@ -33,7 +33,7 @@ public: true
           "https://www.linkedin.com/in/mohammed-asif-161a8118a/"
         ],
         "email": "mailto:yousef@amar.io",
-        "image": "res/image/headshot.jpg",
+        "image": "https://yousefamar.com/memo/assets/images/me.png",
         "jobTitle": "Fractional CTO",
         "name": "Yousef Amar",
         "alumniOf": "University of Birmingham",
@@ -201,7 +201,7 @@ public: true
 
   <body>
     <div class="h-card hcard vcard" style="display: none">
-      <img class="u-photo" src="/headshot-square.jpg" alt="A headshot of Yousef Amar" width="451" height="451">
+      <img class="u-photo" src="/memo/assets/images/me.png" alt="A headshot of Yousef Amar" width="451" height="451">
       <span class="p-name">
         <span class="p-given-name">Yousef</span>
         <span class="p-family-name">Amar</span>
