add: update organisation

--- a/root/yousefamar.njk
+++ b/root/yousefamar.njk
@@ -9,7 +9,7 @@ public: true
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Personal webpage of Dr Yousef Amar &ndash; Fractional CTO and co-founder of Krew, Sawa, Cura.">
+    <meta name="description" content="Personal webpage of Dr Yousef Amar &ndash; CTO and co-founder of Artanis, Krew, Sawa, Cura.">
     <script type="application/ld+json">
       {
         "@context": "http://schema.org",
@@ -34,7 +34,7 @@ public: true
         ],
         "email": "mailto:yousef@amar.io",
         "image": "https://yousefamar.com/memo/assets/images/me.png",
-        "jobTitle": "Fractional CTO",
+        "jobTitle": "CTO Artanis",
         "name": "Yousef Amar",
         "alumniOf": "University of Birmingham",
         "birthPlace": "Cairo, Egypt",
@@ -206,12 +206,12 @@ public: true
         <span class="p-given-name">Yousef</span>
         <span class="p-family-name">Amar</span>
       </span>
-      <span class="p-note">CTO and co-founder of Krew, PhD in networked systems</span>
+      <span class="p-note">CTO and co-founder of Artanis, systems PhD</span>
       <a class="u-url u-uid url uid url fn n" href="https://yousefamar.com"></a>
       <a class="u-email" href="mailto:yousef@amar.io" rel="me">yousef@amar.io</a><br>
       <a class="p-tel" href="tel:+447845443890">+44 7845 443890</a>
-      <span class="p-job-title p-role">Fractional CTO</span>
-      <a class="p-org" href="http://krew.live/" target="blank">Krew Live Ltd</a>
+      <span class="p-job-title p-role">CTO</span>
+      <a class="p-org" href="http://artanis.ai/" target="blank">Artanis Ltd</a>
     </div>
 
     <div class="hero">
@@ -228,7 +228,7 @@ public: true
         </div>
         <div class="fullscreen" data-depth="0">
           <div class="fullscreen center">
-            <h2 class="subtitle" style="margin-top: 5em;">Fractional CTO</h2>
+            <h2 class="subtitle" style="margin-top: 5em;">CTO <a href="http://artanis.ai/" target="blank">Artanis</a></h2>
           </div>
         </div>
         <div class="fullscreen" data-depth="0">
