fix: make artanis link clickable

--- a/root/yousefamar.njk
+++ b/root/yousefamar.njk
@@ -44,7 +44,7 @@ public: true
         "memberOf": "Automatocrats",
         "nationality": "German",
         "telephone": "+44 7845 443890",
-        "url": "http://yousefamar.com",
+        "url": "https://yousefamar.com",
         "sameAs": [
           "https://github.com/yousefamar",
           "https://linkedin.com/in/yousefamar",
@@ -142,6 +142,9 @@ public: true
         text-transform: uppercase;
         pointer-events: all;
       }
+      .pointer-all {
+        pointer-events: all;
+      }
       .values {
         text-align: center;
         font-size: 0.5em;
@@ -211,7 +214,7 @@ public: true
       <a class="u-email" href="mailto:yousef@amar.io" rel="me">yousef@amar.io</a><br>
       <a class="p-tel" href="tel:+447845443890">+44 7845 443890</a>
       <span class="p-job-title p-role">CTO</span>
-      <a class="p-org" href="http://artanis.ai/" target="blank">Artanis Ltd</a>
+      <a class="p-org" href="https://artanis.ai/" target="blank">Artanis Ltd</a>
     </div>
 
     <div class="hero">
@@ -228,7 +231,7 @@ public: true
         </div>
         <div class="fullscreen" data-depth="0">
           <div class="fullscreen center">
-            <h2 class="subtitle" style="margin-top: 5em;">CTO <a href="http://artanis.ai/" target="blank">Artanis</a></h2>
+            <h2 class="subtitle pointer-all" style="margin-top: 5em;">CTO <a href="https://artanis.ai/" target="blank">Artanis</a></h2>
           </div>
         </div>
         <div class="fullscreen" data-depth="0">
